@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020121015"
-#define public MagickPackageReleaseDate "snapshot-20121015"
+#define public MagickPackageVersionAddendum ".020121016"
+#define public MagickPackageReleaseDate "snapshot-20121016"
